RESOLVED FIXED64540
Fullscreen content doesn't use fullscreen controller on Windows
https://bugs.webkit.org/show_bug.cgi?id=64540
Summary Fullscreen content doesn't use fullscreen controller on Windows
Jeff Miller
Reported 2011-07-14 10:35:30 PDT
When watching video fullscreen on Windows, we're still using the inline controller. 1. Go to <http://www.apple.com/ipad/>. 2. Start playing the iPad 2 video. 3. Click on the fullscreen button. The controller at the bottom of the fullscreen window is the inline controller, not the HUD.
Attachments
Patch (5.61 KB, patch)
2011-07-14 17:00 PDT, Jeff Miller
darin: review+
Jeff Miller
Comment 1 2011-07-14 10:37:10 PDT
Jeff Miller
Comment 2 2011-07-14 10:38:03 PDT
It appears that we just need to implement RenderThemeWin::extraFullScreenStyleSheet() on Windows, as we did in RenderThemeMac.
Jeff Miller
Comment 3 2011-07-14 17:00:03 PDT
Jeff Miller
Comment 4 2011-07-15 07:03:37 PDT
Note You need to log in before you can comment on or make changes to this bug.