Fullscreen content doesn't use fullscreen controller on Windows https://bugs.webkit.org/show_bug.cgi?id=64540 <rdar://problem/9510455>

Source/WebCore:

Reviewed by Darin Adler.

RenderThemeWin needs to override extraFullScreenStyleSheet() to return
the fullscreenQuickTime stylesheet.

Test added to fullscreen/video-controls-override.html.

* rendering/RenderThemeWin.cpp:
(WebCore::RenderThemeWin::extraFullScreenStyleSheet): Added.
* rendering/RenderThemeWin.h: Override extraFullScreenStyleSheet().

LayoutTests:

Reviewed by Darin Adler.

Add another test to video-controls-override.html to verify that
we're using the correct fullscreen controller by checking the
height of the controller panel, which is taller than the non-fullscreen
version. Unfortunately, the fullscreen tests don't work on Windows
yet, but I verified this would have caught this issue by simulating
the bug on the Mac.

* fullscreen/video-controls-override-expected.txt: Add new test to check the height of the panel.

* fullscreen/video-controls-override.html: Add new test to check the height of the panel, and
log errors if window.internals or window.layoutTestController are undefined.



Canonical link: https://commits.webkit.org/80323@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91066 268f45cc-cd09-0410-ab3c-d52691b4dbfc